--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -106,3 +106,13 @@ body {
   min-width: 100%;
   justify-content: space-around;
 }
+.navigation .avatar {
+  background-color: red;
+  height: 3rem;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+  object-fit: cover;
+}
+.navigation .main_option  {
+}
