--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -11,8 +11,8 @@ html {
 }
 
 :root {
-  --input-padding: 0.2rem 0.4rem;
-  --input-border-r: 0.2rem;
+  --input-padding: 0.4rem 0.8rem;
+  --input-border-r: 0.4rem;
   --confirm-color: green;
   --component-padding: 0.6rem;
   --main-font-size: 1.5rem;
@@ -125,23 +125,25 @@ body {
   z-index: 999;
   background-color: var(--contrast-component-color);
 }
-.nav_setting li:is(:not(.main_option)) a {
+.nav_setting li:is(:not(.main_option)).fn {
   padding: var(--component-padding);
 }
 .nav_setting .main_option {
   padding: 1rem 1rem 0 1rem;
 }
 
-.nav_setting .main_option a {
+.nav_setting .main_option .fn {
   border-radius: 50%;
   aspect-ratio: 1/1;
   height: 3rem;
   transition: filter 300ms;
 }
-.nav_setting .main_option a:is(:hover, :focus, :focus-visible, :focus-within) {
+.nav_setting
+  .main_option
+  .fn:is(:hover, :focus, :focus-visible, :focus-within) {
   filter: brightness(70%);
 }
-.nav_setting > .link:is(:not(.main_option)) a {
+.nav_setting > .link:is(:not(.main_option)) .fn {
   display: grid;
   text-align: center;
   transition: background-color 300ms;
@@ -149,7 +151,7 @@ body {
   padding-inline: var(--component-padding);
 }
 
-.nav_setting .link a:is(:hover, :focus, :focus-visible, :focus-within) {
+.nav_setting .link .fn:is(:hover, :focus, :focus-visible, :focus-within) {
   background-color: rgb(224, 13, 83);
 }
 .nav_setting .line {
@@ -158,7 +160,6 @@ body {
   /* position: absolute; */
   background-color: rgb(180, 18, 72);
 }
-
 
 /* NotFond */
 
