--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -60,6 +60,12 @@ body {
   min-height: 100vh;
 }
 
+#root {
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  min-height: 100vh;
+}
+
 /* NAVIGATION */
 
 .links-list {
