--- a/app/src/mess/home.css
+++ b/app/src/mess/home.css
@@ -1,10 +1,11 @@
-.home .messages {
-    display: grid;
-    row-gap: .6rem;
+.home .messages-list {
+  display: grid;
+  row-gap: 0.6rem;
+  justify-content: center;
 }
 .home .text {
-    border-radius: var(--input-border-r);
-    padding: var(--input-padding);
-    background-color: red;
-    max-width: max-content;
+  border-radius: var(--input-border-r);
+  padding: var(--input-padding);
+  background-color: red;
+  max-width: max-content;
 }
