--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -1,6 +1,8 @@
 .user {
   display: grid;
   justify-content: center;
+  grid-template-rows: max-content 1fr;
+  height: 100%;
 }
 .profile {
   width: clamp(320px, 55vw, 700px);
@@ -71,4 +73,25 @@
 .profile .panel {
   display: grid;
   grid-template-columns: 1fr 2rem;
+}
+
+.user .container {
+  display: grid;
+
+  border: 2px solid yellow;
+  grid-template-rows: 1fr max-content;
+}
+
+.user .tools {
+  padding-block: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  column-gap: 1rem;
+  place-content: center;
+  border-top: 2px solid yellow;
+}
+
+.user .tools input {
+  border-radius: var(--input-border-r);
+  padding: var(--input-padding);
 }
