--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -1,15 +1,16 @@
 .user {
+  padding-top: 1rem;
   display: grid;
   justify-content: center;
-  grid-template-rows: max-content 1fr;
   height: 100%;
+  grid-template-rows: 220px 1fr;
+  gap: 0.4rem;
+  grid-template-columns: clamp(320px, 60vw, 680px);
 }
 .profile {
-  width: clamp(320px, 55vw, 700px);
   background-color: var(--contrast-component-color);
-  border-radius: 0.5rem;
+  border-radius: 0.5rem 0.5rem 0 0;
   display: grid;
-  row-gap: 4rem;
   padding: var(--component-padding);
 }
 .profile .baner {
@@ -70,16 +71,27 @@
   aspect-ratio: 1/1;
   object-fit: cover;
 }
+
+.profile .nick   {
+  font-size: 1.4rem;
+  font-weight: bolder;
+}
+
+.profile .unqiue-name {
+  opacity: .8;
+  color: whitesmoke;
+}
 .profile .panel {
   display: grid;
-  grid-template-columns: 1fr 2rem;
+justify-content: right;
+padding-inline: 2rem;
+text-align: center;
+grid-template-columns: repeat(2, max-content);
 }
 
 .user .container {
   display: grid;
-
-  border: 2px solid yellow;
-  grid-template-rows: 1fr max-content;
+  grid-template-rows: max-content max-content;
 }
 
 .user .tools {
@@ -88,10 +100,35 @@
   grid-template-columns: repeat(2, max-content);
   column-gap: 1rem;
   place-content: center;
-  border-top: 2px solid yellow;
+  border: 4px solid var(--contrast-component-color);
 }
 
 .user .tools input {
   border-radius: var(--input-border-r);
   padding: var(--input-padding);
+}
+
+.user .messages {
+  display: grid;
+  height: 100%;
+  overflow-y: scroll;
+  gap: 0.8rem 2rem;
+  height: 500px;
+  padding-block: 2rem;
+  border: 4px solid var(--contrast-component-color);
+  grid-auto-rows: max-content;
+  grid-template-columns: repeat(2, 45%);
+}
+.user .right {
+  grid-column: 2/3;
+}
+.user .left {
+  grid-column: 1/2;
+}
+
+.user .text {
+  border-radius: var(--input-border-r);
+  padding: var(--component-padding);
+  background-color: lightseagreen;
+  word-break: break-all;
 }
