--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -72,21 +72,21 @@
   object-fit: cover;
 }
 
-.profile .nick   {
+.profile .nick {
   font-size: 1.4rem;
   font-weight: bolder;
 }
 
 .profile .unqiue-name {
-  opacity: .8;
+  opacity: 0.8;
   color: whitesmoke;
 }
 .profile .panel {
   display: grid;
-justify-content: right;
-padding-inline: 2rem;
-text-align: center;
-grid-template-columns: repeat(2, max-content);
+  justify-content: right;
+  padding-inline: 2rem;
+  text-align: center;
+  grid-template-columns: repeat(2, max-content);
 }
 
 .user .container {
@@ -108,14 +108,17 @@ grid-template-columns: repeat(2, max-content);
   padding: var(--input-padding);
 }
 
+.user .messages-window {
+  border: 4px solid var(--contrast-component-color);
+  height: 500px;
+  padding: 1rem 0 1rem 1rem;
+}
 .user .messages {
-  display: grid;
   height: 100%;
+  display: grid;
   overflow-y: scroll;
   gap: 0.8rem 2rem;
-  height: 500px;
-  padding-block: 2rem;
-  border: 4px solid var(--contrast-component-color);
+  justify-content: center;
   grid-auto-rows: max-content;
   grid-template-columns: repeat(2, 45%);
 }
