--- a/app/src/mess/home.css
+++ b/app/src/mess/home.css
@@ -7,8 +7,8 @@
 
 .home .profil-link {
   min-width: 320px;
-  padding: .4rem .8rem;
-  border-radius: .4rem;
+  padding: 0.4rem 0.8rem;
+  border-radius: 0.4rem;
   background-color: var(--contrast-component-color);
 }
 .home .profil-link a {
@@ -28,3 +28,4 @@
 .home .avatar img {
   border-radius: 50%;
 }
+
