--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -60,7 +60,7 @@ iframe {
 body {
   background-color: #201d20;
   font-family: "Anton", sans-serif;
-letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   min-height: 100vh;
 }
 
@@ -71,7 +71,6 @@ letter-spacing: .1rem;
 }
 
 /* NAVIGATION */
-
 
 .links-list {
   display: grid;
@@ -111,7 +110,7 @@ letter-spacing: .1rem;
   height: 5rem;
   background-color: #282428;
   display: grid;
- box-shadow: 0 1rem 2rem #1a171a;
+  box-shadow: 0 1rem 2rem #1a171a;
   align-items: center;
 }
 .navigation .links-list {
@@ -204,4 +203,10 @@ letter-spacing: .1rem;
   font-weight: bold;
   color: lightgreen;
   text-align: right;
+}
+
+.loading {
+  display: grid;
+  place-content: center;
+  height: 100%;
 }
