--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -112,6 +112,7 @@
   border: 4px solid var(--contrast-component-color);
   height: 500px;
   padding: 1rem 0 1rem 1rem;
+
 }
 .user .messages {
   height: 100%;
@@ -134,4 +135,10 @@
   padding: var(--component-padding);
   background-color: lightseagreen;
   word-break: break-all;
+}
+
+.user .loading {
+  grid-column: 1/3;
+  text-align: center;
+  padding: 0.4rem 1rem;
 }
