--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -178,6 +178,9 @@ body {
 /* NotFond */
 
 .empty-page {
+  position: absolute;
+  left: 0;
+  top: 0;
   height: 100vh;
   display: grid;
   place-content: center;
