--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -85,10 +85,21 @@
   display: grid;
   justify-content: right;
   padding-inline: 2rem;
+  align-items: center;
+  gap: 1rem;
   text-align: center;
   grid-template-columns: repeat(2, max-content);
 }
-
+.profile .panel .friend {
+  background-color: blue;
+  height: max-content;
+  padding: .4rem 1rem;
+  transition: filter 300ms;
+  border-radius: var(--input-border-r);
+}
+.profile .panel .friend:is(:hover,:focus) {
+  filter: brightness(60%);
+}
 .user .container {
   display: grid;
   grid-template-rows: max-content max-content;
