--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -93,46 +93,126 @@
 .profile .panel .friend {
   background-color: blue;
   height: max-content;
-  padding: .4rem 1rem;
+  padding: 0.4rem 1rem;
   transition: filter 300ms;
   border-radius: var(--input-border-r);
 }
-.profile .panel .friend:is(:hover,:focus) {
+.profile .panel .friend:is(:hover, :focus) {
   filter: brightness(60%);
 }
 .user .container {
   display: grid;
-  grid-template-rows: max-content max-content;
+  grid-template-rows: repeat(2, max-content);
 }
-
+.user .send-message:disabled {
+  cursor:not-allowed;
+}
+.user .send-message {
+  background-color: rgb(20, 151, 20);
+  border-radius: 0.6rem;
+  border: 3px solid transparent;
+  padding: 0.4rem 0.8rem;
+  transition: filter, border-color, 300ms ease-out;
+}
+.user .send-message:is(:hover, :focus) {
+  background-color: green;
+  border-color: rgba(49, 240, 1, 0.562);
+}
 .user .tools {
   padding-block: 1rem;
   display: grid;
-  grid-template-columns: repeat(2, max-content);
-  column-gap: 1rem;
-  place-content: center;
+  grid-template-columns: 2fr 1fr;
+  justify-content: space-between;
   border: 4px solid var(--contrast-component-color);
+padding-inline:2rem;
+column-gap: 2rem;
+  background-color: rgba(0, 0, 0, 0.815);
 }
 
 .user .tools input {
+  width: 100%;
+
+  box-shadow: 0 0 .8rem 0rem rgb(78, 78, 78);
+  background-color: rgba(27, 22, 22, 0.979);
   border-radius: var(--input-border-r);
   padding: var(--input-padding);
+  transition: border-color 300ms ease-out;
+  border: 2px solid transparent;
+}
+.user .tools input:is(:hover,:focus) {
+  border-color: white;
 }
 
 .user .messages-window {
   border: 4px solid var(--contrast-component-color);
   height: 500px;
-  padding: 1rem 0 1rem 1rem;
-
 }
 .user .messages {
-  height: 100%;
   display: grid;
   overflow-y: scroll;
+  position: relative;
+  height: 100%;
+  padding: 0 1rem 1rem 1rem;
   gap: 0.8rem 2rem;
   justify-content: center;
   grid-auto-rows: max-content;
-  grid-template-columns: repeat(2, 45%);
+  grid-template-columns: repeat(2, calc(50% - 1rem));
+}
+.empty {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: grid;
+  grid-template-columns: repeat(4, max-content);
+  column-gap: 0.2rem;
+  justify-content: center;
+  align-items: end;
+  padding-bottom: 4rem;
+  height: 100%;
+  width: 100%;
+}
+.empty .waiting-message {
+  animation: spirala 10s ease-out infinite;
+}
+.empty .circle {
+  border: 2px solid red;
+  width: 0.5rem;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+}
+.empty .circle:nth-child(2) {
+  animation: empty_circle 3s ease-out infinite;
+}
+.empty .circle:nth-child(3) {
+  animation: empty_circle 3s ease-out 1s infinite;
+}
+.empty .circle:nth-child(4) {
+  animation: empty_circle 3s ease-out 2s infinite;
+}
+
+@keyframes empty_circle {
+  50% {
+    transform: translateY(-1rem);
+  }
+  100% {
+    transform: translateY(0rem);
+  }
+}
+
+@keyframes spirala {
+  30% {
+    translate: 2rem -2rem;
+  }
+  50% {
+    translate: 0rem 0rem;
+  }
+
+  80% {
+    translate: -2rem -2rem;
+  }
+  100% {
+    translate: 0rem 0rem;
+  }
 }
 .user .right {
   grid-column: 2/3;
@@ -146,6 +226,7 @@
   padding: var(--component-padding);
   background-color: lightseagreen;
   word-break: break-all;
+  height: max-content;
 }
 
 .user .loading {
