--- a/app/src/main-component/home.css
+++ b/app/src/main-component/home.css
@@ -1,6 +1,5 @@
 .home .friends-list {
   display: grid;
-  padding-block: 2rem;
   row-gap: 1rem;
   justify-content: center;
 }
@@ -40,3 +39,8 @@
   border-radius: 50%;
 }
 
+.home .ester-egg {
+  text-align: center;
+  padding-block: 1rem;
+  color: gray;
+}
