--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -1,24 +1,24 @@
 .user {
-  padding-top: 1rem;
+  backdrop-filter: brightness(60%);
   display: grid;
+  align-content: center;
   justify-content: center;
   height: 100%;
-  grid-template-rows: 220px 1fr;
-  gap: 0.4rem;
   grid-template-columns: clamp(320px, 60vw, 680px);
 }
-.profile {
-  background-color: var(--contrast-component-color);
-  border-radius: 0.5rem 0.5rem 0 0;
-  display: grid;
-  padding: var(--component-padding);
+
+.content {
+box-shadow: 0 .2rem 1rem  rgb(0, 0, 0) ;
 }
+.profile {
+  background-color: rgb(22, 21, 21);
+  border-bottom: 2px solid rgb(53, 4, 68);
+}
+
 .profile .baner {
   position: relative;
   z-index: 1;
-  background-color: rgb(71, 12, 12);
-  height: 7rem;
-  border-radius: var(--input-border-r);
+  height: 8rem;
 }
 .profile .baner > img {
   object-fit: cover;
@@ -29,40 +29,23 @@
   display: grid;
   place-content: center;
   aspect-ratio: 1/1;
-  bottom: -3.5rem;
+  bottom: -2.5rem;
   left: 8%;
-  width: 7rem;
+  width: 5rem;
 }
 .profile .avatar::after {
   content: "";
+  width: 110%;
   position: absolute;
-  background-color: rgba(29, 11, 17, 0.959);
+  background-color: rgba(61, 26, 38, 0.959);
   border-radius: 50%;
   aspect-ratio: 1/1;
-  width: 8rem;
+  top: -0.2rem;
   z-index: 1;
-  bottom: -0.5rem;
-  right: -0.5rem;
+  left: -5%;
+  right: -5%;
 }
-.profile .avatar::before {
-  content: "";
-  width: 8rem;
-  z-index: 2;
-  position: absolute;
-  background-color: var(--contrast-component-color);
-  height: 4rem;
-  bottom: -0.5rem;
-  top: 50%;
-  left: -0.5rem;
-}
-.profile .avatar {
-  aspect-ratio: 1/1;
-  width: 6rem;
-  margin-inline: auto;
-  display: grid;
-  place-content: center;
-  border-radius: 50%;
-}
+
 .avatar > img {
   width: 100%;
   border-radius: 50%;
@@ -72,26 +55,23 @@
   object-fit: cover;
 }
 
+.profile .panel {
+  display: grid;
+  padding: 1rem;
+  align-items: center;
+  text-align: center;
+  grid-template-columns: 1fr max-content;
+}
 .profile .nick {
   font-size: 1.4rem;
   font-weight: bolder;
 }
-
 .profile .unqiue-name {
   opacity: 0.8;
   color: whitesmoke;
 }
-.profile .panel {
-  display: grid;
-  justify-content: right;
-  padding-inline: 2rem;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-  grid-template-columns: repeat(2, max-content);
-}
 .profile .panel .friend {
-  background-color: blue;
+  background-color: #6600cc;
   height: max-content;
   padding: 0.4rem 1rem;
   transition: filter 300ms;
@@ -100,59 +80,61 @@
 .profile .panel .friend:is(:hover, :focus) {
   filter: brightness(60%);
 }
+
+/* Message Cotainer */
 .user .container {
   display: grid;
   grid-template-rows: repeat(2, max-content);
 }
 .user .send-message:disabled {
-  cursor:not-allowed;
+  cursor: not-allowed;
 }
 .user .send-message {
-  background-color: rgb(20, 151, 20);
+  background-color: #6600cc;
   border-radius: 0.6rem;
   border: 3px solid transparent;
   padding: 0.4rem 0.8rem;
   transition: filter, border-color, 300ms ease-out;
 }
 .user .send-message:is(:hover, :focus) {
-  background-color: green;
-  border-color: rgba(49, 240, 1, 0.562);
+  background-color: #8000ff;
+  border-color: #5900b3;
 }
 .user .tools {
-  padding-block: 1rem;
   display: grid;
   grid-template-columns: 2fr 1fr;
   justify-content: space-between;
-  border: 4px solid var(--contrast-component-color);
-padding-inline:2rem;
-column-gap: 2rem;
-  background-color: rgba(0, 0, 0, 0.815);
+  padding: 2rem;
+  border-top: 2px solid rgb(53, 4, 68);
+  background-color: #14081f;
+  column-gap: 2rem;
 }
 
 .user .tools input {
   width: 100%;
-
-  box-shadow: 0 0 .8rem 0rem rgb(78, 78, 78);
-  background-color: rgba(27, 22, 22, 0.979);
+  box-shadow: 0 0.1rem 1rem -0.2rem #bf80ff;
+  background-color: rgba(61, 56, 56, 0.589);
   border-radius: var(--input-border-r);
   padding: var(--input-padding);
   transition: border-color 300ms ease-out;
   border: 2px solid transparent;
 }
-.user .tools input:is(:hover,:focus) {
-  border-color: white;
+.user .tools input:is(:hover, :focus) {
+  border-color: #5900b3;
 }
-
+.user .tools input::placeholder {
+  color: pink;
+}
 .user .messages-window {
-  border: 4px solid var(--contrast-component-color);
   height: 500px;
+  background-color: rgba(22, 20, 20, 0.322);
 }
 .user .messages {
   display: grid;
   overflow-y: scroll;
   position: relative;
   height: 100%;
-  padding: 0 1rem 1rem 1rem;
+  padding: 1rem;
   gap: 0.8rem 2rem;
   justify-content: center;
   grid-auto-rows: max-content;
@@ -224,7 +206,7 @@ column-gap: 2rem;
 .user .text {
   border-radius: var(--input-border-r);
   padding: var(--component-padding);
-  background-color: lightseagreen;
+  background-color: rgb(89, 80, 221);
   word-break: break-all;
   height: max-content;
 }
