--- a/app/src/friends-menager/friends-menager.css
+++ b/app/src/friends-menager/friends-menager.css
@@ -1,8 +1,16 @@
+.menage-friends {
+  display: grid;
+  text-align: center;
+  padding: 2rem 1rem;
+  gap: 2rem;
+  grid-template-columns: 30% 60%;
+}
+
 .friends-list {
   display: grid;
   justify-content: center;
   gap: 1rem;
-  padding-block: 2rem;
+  width: 100%;
 }
 .friend-container {
   display: grid;
