--- a/app/src/user/user.css
+++ b/app/src/user/user.css
@@ -1,4 +1,4 @@
-.user {
+ .user {
   backdrop-filter: brightness(60%);
   display: grid;
   align-content: center;
@@ -7,24 +7,24 @@
   grid-template-columns: clamp(320px, 60vw, 680px);
 }
 
-.content {
+.profile .content {
   box-shadow: 0 0.2rem 1rem rgb(0, 0, 0);
 }
-.profile {
+.show-case {
   background-color: rgb(22, 21, 21);
   border-bottom: 2px solid #350444;
 }
 
-.profile .baner {
+.show-case .baner {
   position: relative;
   z-index: 1;
   height: 8rem;
 }
-.profile .baner > img {
+.show-case .baner > img {
   object-fit: cover;
   width: 100%;
 }
-.profile .circle {
+.show-case .circle {
   position: absolute;
   display: grid;
   place-content: center;
@@ -33,7 +33,7 @@
   left: 8%;
   width: 5rem;
 }
-.profile .avatar::after {
+.show-case .avatar::after {
   content: "";
   width: 110%;
   position: absolute;
@@ -46,7 +46,7 @@
   right: -5%;
 }
 
-.profile .avatar > img {
+.show-case .avatar > img {
   width: 100%;
   border-radius: 50%;
   position: relative;
@@ -55,52 +55,52 @@
   object-fit: cover;
 }
 
-.profile .panel {
+.show-case .panel {
   display: grid;
   padding: 1rem;
   align-items: center;
   text-align: center;
   grid-template-columns: 1fr max-content;
 }
-.profile .nick {
+.show-case .nick {
   font-size: 1.4rem;
   font-weight: bolder;
 }
-.profile .unqiue-name {
+.show-case .unqiue-name {
   opacity: 0.8;
   color: whitesmoke;
 }
-.profile .panel .friend {
+.show-case .panel .friend {
   background-color: #6600cc;
   height: max-content;
   padding: 0.4rem 1rem;
   transition: filter 300ms;
   border-radius: var(--input-border-r);
 }
-.profile .panel .friend:is(:hover, :focus) {
+.show-case .panel .friend:is(:hover, :focus) {
   filter: brightness(60%);
 }
 
 /* Message Cotainer */
-.user .container {
+ .profile .container {
   display: grid;
   grid-template-rows: repeat(2, max-content);
 }
-.user .send-message:disabled {
+ .profile .send-message:disabled {
   cursor: not-allowed;
 }
-.user .send-message {
+ .profile .send-message {
   background-color: #6600cc;
   border-radius: 0.6rem;
   border: 3px solid transparent;
   padding: 0.4rem 0.8rem;
   transition: filter, border-color, 300ms ease-out;
 }
-.user .send-message:is(:hover, :focus) {
+ .profile .send-message:is(:hover, :focus) {
   background-color: #8000ff;
   border-color: #5900b3;
 }
-.user .tools {
+ .profile .tools {
   display: grid;
   grid-template-columns: 2fr 1fr;
   justify-content: space-between;
@@ -110,7 +110,7 @@
   column-gap: 2rem;
 }
 
-.user .tools input {
+ .profile .tools input {
   width: 100%;
   box-shadow: 0 0.1rem 1rem -0.2rem #bf80ff;
   background-color: rgba(61, 56, 56, 0.589);
@@ -119,17 +119,17 @@
   transition: border-color 300ms ease-out;
   border: 2px solid transparent;
 }
-.user .tools input:is(:hover, :focus) {
+ .profile .tools input:is(:hover, :focus) {
   border-color: #5900b3;
 }
-.user .tools input::placeholder {
+ .profile .tools input::placeholder {
   color: pink;
 }
-.user .messages-window {
+ .profile .messages-window {
   height: 500px;
   background-color: rgba(22, 20, 20, 0.322);
 }
-.user .messages {
+ .profile .messages {
   display: grid;
   overflow-y: scroll;
   position: relative;
@@ -196,14 +196,14 @@
     translate: 0rem 0rem;
   }
 }
-.user .right {
+ .profile .right {
   grid-column: 2/3;
 }
-.user .left {
+ .profile .left {
   grid-column: 1/2;
 }
 
-.user .text {
+ .profile .text {
   border-radius: var(--input-border-r);
   padding: var(--component-padding);
   background-color: rgb(89, 80, 221);
@@ -211,7 +211,7 @@
   height: max-content;
 }
 
-.user .loading {
+ .profile .loading {
   grid-column: 1/3;
   text-align: center;
   padding: 0.4rem 1rem;
@@ -220,21 +220,35 @@
 .edit-profile-window input[type="file"] {
   display: none;
 }
+.edit-profile-window {
+  display: grid;
+  row-gap: 1rem;
+}
+.edit-profile-window .banner {
+  height: 100px;
+}
 
 .edit-profile-window .avatar,
 .edit-profile-window .banner {
-  display: grid;
   cursor: pointer;
-  overflow: hidden;
-  max-width: max-content;
-  background-color: yellow;
   position: relative;
 }
+.edit-profile-window .banner {
+  height: 200px;
+  max-width: 800px;
+}
+.edit-profile-window .avatar img,
+.edit-profile-window .banner img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
-.edit-profile-window .avatar img {
-  max-width: 6rem;
-  aspect-ratio: 1/1;
+.edit-profile-window .avatar {
   border-radius: 50%;
+  max-width: 6rem;
+  overflow: hidden;
+  aspect-ratio: 1/1;
 }
 
 .edit-profile-window .avatar::before,
@@ -242,7 +256,26 @@
   content: url("./images/add_new_photo.svg");
   display: grid;
   place-content: center;
+  cursor: pointer;
+  border: 4px solid orange;
+  border-radius: 50%;
   position: absolute;
-  width: 100%;
+  top: calc(50% - 2rem);
+  left: calc(50% - 2rem);
+  width: 4rem;
+  backdrop-filter: blur(200px);
   aspect-ratio: 1/1;
+}
+
+.edit-profile-window .confirm {
+  background-color: green;
+  width: max-content;
+  margin-inline:auto;
+  padding: var(--component-padding);
+  border-radius: .3rem;
+  transition: filter,scale, var(--transition-std);
+}
+.edit-profile-window .confirm:is(:hover,:focus,:focus-visible,:focus-within) {
+  filter: brightness(50%);
+  scale: 1.2;
 }
